--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.7",
         "sass-loader": "^12.4.0"
+    },
+    "dependencies": {
+        "normalize.css": "^8.0.1"
     }
 }
