--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "sass-loader": "^12.4.0"
     },
     "dependencies": {
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "vue": "^3.2.30"
     }
 }
