--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "normalize.css": "^8.0.1",
-        "vue": "^3.2.30"
+        "vue": "^3.2.30",
+        "vue-final-modal": "^3.4.3"
     }
 }
